# threatprism

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
evaluation/: README.md  eval_runner.py  generate_results.py  metrics.py
evaluation/ground_truth/: dvwa.json  juice_shop.json  nodegoat.json  railsgoat.json  webgoat.json
src/threatlens/: __init__.py  correlation.py  mappings.py  models.py  reports.py  server.py
src/threatlens/frameworks/: attack_tree.py  dread.py  linddun.py  pasta.py  stride.py
src/threatprism/: __init__.py  correlation.py  mappings.py  models.py  reports.py  server.py
src/threatprism/frameworks/: __init__.py  attack_tree.py  dread.py  linddun.py  pasta.py  stride.py
tests/: test_correlation.py  test_frameworks.py  test_scoring.py
