[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threatprism"
version = "0.1.0"
description = "Multi-framework threat intelligence MCP server — STRIDE, DREAD, LINDDUN, and PASTA analysis for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Manam Bharadwaj" }]
keywords = [
    "security",
    "threat-modeling",
    "mcp",
    "stride",
    "dread",
    "linddun",
    "pasta",
    "ai-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastmcp>=2.3.4",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/manambharadwaj/threatprism"
Repository = "https://github.com/manambharadwaj/threatprism"
Issues = "https://github.com/manambharadwaj/threatprism/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
]

[project.scripts]
threatprism = "threatprism:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/threatprism"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["threatprism"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
